# ParquetSharp

./: ...  .dockerignore  .gitattributes  .gitignore  .manifest  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  ParquetSharp.DotSettings  README.md  RowOriented.md  SECURITY.md  TypeFactories.md  build_linux.sh  build_osx.sh  build_unix.sh  build_windows.bat  build_windows.ps1  build_windows_arm.ps1  docfx.json  global.json  index.md  toc.yml  vcpkg-configuration.json  vcpkg.json  vcpkg_linux.sh  vcpkg_osx.sh  vcpkg_unix.sh  vcpkg_version.txt  vcpkg_windows.bat
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/vcpkg-cache-action/: .gitignore  action.yml  main.py  package-lock.json  package.json  proxy.py  pyproject.toml  tsconfig.json
.github/actions/vcpkg-cache-action/src/: main.ts
.github/ci-build/: Dockerfile
.github/docker/: Dockerfile.linux-ci
.github/workflows/: build-docker.yml  check-required.yml  ci.yml  codeql-analysis.yml  devcontainer.yml  docs.yml  linux.yml  nudge.yml  nuget.yml  publish-docs.yml  windows.yml  zizmor.yml
cmake/: FindArrow.cmake  FindBZip2.cmake  FindBrotli.cmake  FindGflags.cmake  FindGlog.cmake  FindLz4.cmake  FindOpenSSL.cmake  FindParquetCpp.cmake  FindSnappy.cmake  FindThrift.cmake  FindZlib.cmake  FindZstd.cmake  Findutf8proc.cmake
cpp/: AesKey.h  Buffer.cpp  BufferOutputStream.cpp  BufferReader.cpp  CMakeLists.txt  CString.h  ColumnChunkMetaData.cpp  ColumnCryptoMetaData.cpp  ColumnDecryptionProperties.cpp  ColumnDecryptionPropertiesBuilder.cpp  ColumnDescriptor.cpp  ColumnEncryptionProperties.cpp  ColumnEncryptionPropertiesBuilder.cpp  ColumnPath.cpp  ColumnReader.cpp  ColumnWriter.cpp  Enums.cpp  ExceptionInfo.cpp  ExceptionInfo.h  FileDecryptionProperties.cpp  FileDecryptionPropertiesBuilder.cpp  FileEncryptionProperties.cpp  FileEncryptionPropertiesBuilder.cpp  FileMetaData.cpp  GroupNode.cpp  InputStream.cpp  KeyValueMetadata.cpp  LogicalType.cpp  ManagedAadPrefixVerifier.h  ManagedDecryptionKeyRetriever.h  ManagedOutputStream.cpp  ManagedRandomAccessFile.cpp  MemoryPool.cpp  Node.cpp  OutputStream.cpp  ParquetFileReader.cpp  ParquetFileWriter.cpp  PrimitiveNode.cpp  RandomAccessFile.cpp  ReaderProperties.cpp  (+13 more)
cpp/arrow/: ArrowReaderProperties.cpp  ArrowWriterProperties.cpp  ArrowWriterPropertiesBuilder.cpp  FileReader.cpp  FileWriter.cpp  SchemaField.cpp  SchemaManifest.cpp
cpp/encryption/: CryptoFactory.cpp  DecryptionConfiguration.cpp  EncryptionConfiguration.cpp  KmsConnectionConfig.cpp  ManagedKmsClient.h  ManagedKmsClientFactory.h
csharp/: AadPrefixVerifier.cs  AesKey.cs  ApplicationVersion.cs  ArrowStatusCode.cs  ArrowTypeIdExtensions.cs  BinaryType.cs  BufferedReader.cs  ByteArray.cs  ByteArrayReaderCache.cs  ByteBuffer.cs  CacheOption.cs  ChildParquetHandle.cs  Column.cs  ColumnChunkMetaData.cs  ColumnCryptoMetaData.cs  ColumnDecryptionProperties.cs  ColumnDecryptionPropertiesBuilder.cs  ColumnDescriptor.cs  ColumnEncryptionProperties.cs  ColumnEncryptionPropertiesBuilder.cs  ColumnOrder.cs  ColumnReader.cs  ColumnWriter.cs  Compression.cs  CppEnums.cs  CppTypeId.cs  Date.cs  DateTimeNanos.cs  Decimal.cs  Decimal128.cs  DecimalConverter.cs  DecryptionKeyRetriever.cs  DefaultWriterProperties.cs  Encoding.cs  ExceptionInfo.cs  FileDecryptionProperties.cs  FileDecryptionPropertiesBuilder.cs  FileEncryptionProperties.cs  FileEncryptionPropertiesBuilder.cs  FileMetaData.cs  (+57 more)
csharp.benchmark/: .editorconfig  Check.cs  DataConfig.cs  DecimalRead.cs  DecimalWrite.cs  FloatArrayTimeSeriesRead.cs  FloatTimeSeriesBase.cs  FloatTimeSeriesRead.cs  FloatTimeSeriesWrite.cs  NestedRead.cs  NestedWrite.cs  ParquetSharp.Benchmark.csproj  Program.cs  ResultColumn.cs  SizeInBytesColumn.cs
csharp.benchmark/Properties/: launchSettings.json
csharp.config.benchmarks/: ParquetSharp.Config.Benchmarks.csproj  ParquetSharpConfigBenchmarks.cs  Program.cs
csharp.smoketest/: Program.cs  csharp.smoketest.csproj
csharp.test/: LogicalColumnReaderToArray.cs  LogicalValueGetter.cs  LogicalValueSetter.cs  MemoryPools.cs  ParquetSharp.Test.csproj  PhysicalValueGetter.cs  PhysicalValueSetter.cs  Program.cs  TempWorkingDirectory.cs  TestAadPrefixVerifier.cs  TestAesKey.cs  TestBuffer.cs  TestByteArrayReaderCache.cs  TestCaseGenericAttribute.cs  TestColumn.cs  TestColumnPath.cs  TestColumnReader.cs  TestColumnWriter.cs  TestCustomNullableType.cs  TestDate.cs  TestDateTimeNanos.cs  TestDecimal.cs  TestDecimal128.cs  TestDerivedKeyRetriever.cs  TestEncryption.cs  TestKeyValueMetadata.cs  TestLogicalColumnReader.cs  TestLogicalColumnWriter.cs  TestLogicalTypeFactory.cs  TestLogicalTypeRoundtrip.cs  TestManagedRandomAccessFile.cs  TestMaps.cs  TestMemoryLeaks.cs  TestMemoryPool.cs  TestNestedReads.cs  TestNode.cs  TestParquetDataPageVersion.cs  TestParquetFileReader.cs  TestParquetFileWriter.cs  TestParquetPerformance.cs  (+5 more)
csharp.test/Arrow/: TestArrowReaderProperties.cs  TestArrowRoundTrip.cs  TestArrowWriterProperties.cs  TestBinaryType.cs  TestEncryptionRoundTrip.cs  TestFileReader.cs  TestFileWriter.cs  TestTimeUnit.cs
csharp.test/Artifacts/: nested.parquet  simple.parquet
csharp.test/Encryption/: TestCryptoFactory.cs  TestDecryptionConfiguration.cs  TestEncryptionConfiguration.cs  TestEncryptionRoundTrip.cs  TestKmsClient.cs  TestKmsConnectionConfig.cs
csharp.test/TestFiles/: generate_parquet.py  map.parquet  nested.parquet  write_nested_string_arrays.py
csharp/Arrow/: ArrowReaderProperties.cs  ArrowTimeUnit.cs  ArrowWriterProperties.cs  ArrowWriterPropertiesBuilder.cs  FileReader.cs  FileWriter.cs  SchemaField.cs  SchemaManifest.cs
csharp/Encryption/: CryptoFactory.cs  DecryptionConfiguration.cs  EncryptionConfiguration.cs  IKmsClient.cs  (+3 more)
docs/: Arrow.md  Encryption.md  GettingStarted.md  Nested.md  PowerShell.md  Reading.md  RowOriented.md  TimeSpan.md  TypeFactories.md  Writing.md  docfx.json  index.md  toc.yml
fsharp.test/: ParquetSharp.Test.FSharp.fsproj  TestRowOrientedApi.fs
(+84 files in other folders)
