[project]
name = "vcpkg-cache-action"
version = "0.1.0"
description = "GitHub Action to provide vcpkg binary caching via a custom HTTP server that proxies to GitHub Actions cache."
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.0",
    "fastapi[standard]>=0.119.0",
]
